--- a/sda.html
+++ b/sda.html
@@ -25,12 +25,12 @@
                     },
                     animation: {
                         'bounce-slow': 'bounce 3s infinite',
-                        'float': 'float 3s ease-in-out infinite',
+                        'float': 'float 2s ease-in-out infinite',
                     },
                     keyframes: {
                         float: {
-                            '0%, 100%': { transform: 'translateY(0) rotate(0deg)' },
-                            '50%': { transform: 'translateY(-10px) rotate(-5deg)' },
+                            '0%, 100%': { transform: 'translateY(0)' },
+                            '50%': { transform: 'translateY(-10px)' },
                         }
                     }
                 }
@@ -88,14 +88,17 @@
                 <div class="relative group pointer-events-auto">
                     <a href="#contact" class="relative z-10 inline-flex items-center gap-3 px-5 py-2 bg-brand-dark border-2 border-brand-lightest text-brand-lightest font-display font-bold uppercase tracking-widest text-xs shadow-[4px_4px_0_#eaebfe] hover:translate-y-1 hover:shadow-none hover:bg-brand-lightest hover:text-brand-deep transition-all duration-150 active:translate-y-1 active:shadow-none">
                         <span class="w-2 h-2 bg-emerald-400 rounded-full animate-pulse"></span>
-                        Inquiries?
+                        Available for Inquiries
                     </a>
 
                     <div class="absolute top-full -right-4 mt-2 z-20 animate-float pointer-events-none">
-                        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="drop-shadow-[2px_2px_0_rgba(0,0,0,0.5)]">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M5.5 2H3V4H2V17H3V19H5V21H7V18H8V17H10V16H12V15H14V14H16V13H18V11H19V2H5.5ZM5 4H17V9H16V10H14V11H12V12H10V13H8V14H6V15H5V4Z" fill="white"/>
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7 21V19H5V17H2V4H3V2H5.5H19V11H18V13H16V14H14V15H12V16H10V17H8V18H7V21ZM17 9V4H5V15H6V14H8V13H10V12H12V11H14V10H16V9H17Z" fill="#354c7c"/> 
-                        </svg>
+                        <img src="/images/pixel-char.gif" 
+                             alt="Pixel Character" 
+                             class="pixel-art absolute -top-20 -right-20 w-50 h-50 animate-bounce-slow z-10 drop-shadow-[0_5px_5px_rgba(0,0,0,0.5)]">
+                    </div>
+                    
+                    <div class="absolute top-full -right-4 mt-2 z-20 animate-float pointer-events-none">
+                         <img src="/images/cursor.png" alt="Cursor" class="w-10 h-auto pixel-art drop-shadow-[2px_2px_0_rgba(0,0,0,0.5)]">
                     </div>
                 </div>
             </div>
@@ -298,7 +301,27 @@
             <div class="group relative flex flex-col md:flex-row gap-10 mb-20">
                 <div class="md:w-1/4 flex flex-col items-start md:items-end md:text-right pt-2">
                     <span class="text-brand-dark font-display font-bold text-5xl">2025</span>
-                    <span class="text-brand-light text-sm uppercase tracking-widest mt-2">Dec - Present</span>
+                    <span class="text-brand-light text-sm uppercase tracking-widest mt-2">Started April</span>
+                </div>
+                <div class="md:w-3/4 border-l-2 border-brand-dark pl-8 md:pl-12 py-2 relative">
+                    <div class="absolute -left-[9px] top-4 w-4 h-4 bg-brand-lightest rounded-full border-4 border-brand-deep"></div>
+                    <h3 class="text-2xl font-bold text-brand-lightest mb-2 group-hover:text-brand-light transition-colors">Pokedex</h3>
+                    <p class="text-brand-light mb-6 max-w-2xl leading-relaxed">
+                        Simple UI/UX 1st year web dev API usage of Pokemon using HTML/CSS/JS.
+                    </p>
+                    <div class="flex flex-wrap gap-3 mb-6">
+                        <span class="px-3 py-1 bg-brand-dark/30 text-brand-lightest text-xs font-mono rounded border border-brand-dark">HTML</span>
+                        <span class="px-3 py-1 bg-brand-dark/30 text-brand-lightest text-xs font-mono rounded border border-brand-dark">CSS</span>
+                        <span class="px-3 py-1 bg-brand-dark/30 text-brand-lightest text-xs font-mono rounded border border-brand-dark">JavaScript</span>
+                        <span class="px-3 py-1 bg-brand-dark/30 text-brand-lightest text-xs font-mono rounded border border-brand-dark">API</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="group relative flex flex-col md:flex-row gap-10 mb-20">
+                <div class="md:w-1/4 flex flex-col items-start md:items-end md:text-right pt-2">
+                    <span class="text-brand-dark font-display font-bold text-5xl">2025</span>
+                    <span class="text-brand-light text-sm uppercase tracking-widest mt-2">Started Dec</span>
                 </div>
                 <div class="md:w-3/4 border-l-2 border-brand-dark pl-8 md:pl-12 py-2 relative">
                     <div class="absolute -left-[9px] top-4 w-4 h-4 bg-brand-lightest rounded-full border-4 border-brand-deep"></div>
@@ -317,7 +340,7 @@
             <div class="group relative flex flex-col md:flex-row gap-10">
                 <div class="md:w-1/4 flex flex-col items-start md:items-end md:text-right pt-2">
                     <span class="text-brand-dark font-display font-bold text-5xl">2026</span>
-                    <span class="text-brand-light text-sm uppercase tracking-widest mt-2">Jan - Feb</span>
+                    <span class="text-brand-light text-sm uppercase tracking-widest mt-2">Started Jan</span>
                 </div>
                 <div class="md:w-3/4 border-l-2 border-brand-dark pl-8 md:pl-12 py-2 relative">
                     <div class="absolute -left-[9px] top-4 w-4 h-4 bg-brand-lightest rounded-full border-4 border-brand-deep"></div>
@@ -345,7 +368,7 @@
             </div>
 
             <div class="flex flex-col gap-4 w-full md:w-auto">
-                <a href="mailto:neithan@example.com" class="group flex items-center justify-between gap-6 px-8 py-4 bg-brand-dark hover:bg-brand-lightest hover:text-brand-deep transition-all duration-300 rounded text-sm font-bold tracking-wider uppercase">
+                <a href="mailto:gulaneithandeniel@gmail.com" class="group flex items-center justify-between gap-6 px-8 py-4 bg-brand-dark hover:bg-brand-lightest hover:text-brand-deep transition-all duration-300 rounded text-sm font-bold tracking-wider uppercase">
                     <span>Email Me</span>
                     <span class="group-hover:translate-x-1 transition-transform">→</span>
                 </a>
